# product-circuit-breaker

./: .env  Dockerfile  README.md  docker-compose.yml  log_config.yaml  pyproject.toml
app/: auth.py  circuit_breaker.py  database.py  main.py  middleware.py  models.py  products_mock.py  redis_client.py  schemas.py  token.py  wishlist.py
app/routes/: clients.py  product.py  wishlist.py
infra/: loki-config.yaml  promtail-config.yaml
infra/prometheus/: prometheus.yml
tests/: test_api.py  test_product.py  test_wishlist.py
