[tool.poetry]
name = "wishlist_api"
version = "0.1.0"
description = "API de Wishlist com resiliência e observabilidade"
authors = ["Yuri"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
motor = "^3.4.0"
beanie = "^1.23.2"
pydantic = { extras = ["email"], version = "^2.6.4" }
httpx = "^0.27.0"
aiobreaker = "^1.0.0"
aioredis = "^2.0.1"
tenacity = "^8.2.3"
structlog = "^24.1.0"
prometheus-fastapi-instrumentator = "^6.1.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
bcrypt = "4.0.1"
redis="6.2.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
